@@ -13,6 +13,9 @@ Changes between 1.X and 1.1.1
 - new option: --confcutdir=dir will make py.test only consider conftest 
   files that are relative to the specified dir.  
 
+- new funcarg: "pytestconfig" is the pytest config object for access
+  to command line args and can now be easily used in a test. 
+
 - install 'py.test' and `py.which` with a ``-$VERSION`` suffix to
   disambiguate between Python3, python2.X, Jython and PyPy installed versions. 
 
